--- a/공모사업.html
+++ b/공모사업.html
@@ -2,74 +2,41 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>공고 통합 대시보드 (15개 기관 신호등)</title>
+  <title>공고 통합 대시보드 (15개 기관)</title>
   <style>
     :root { --bg:#f6f7fb; --card:#ffffff; --accent:#1d4ed8; --line:#d9dfeb; }
-    body { margin:0; font-family: 'Malgun Gothic', sans-serif; background: var(--bg); padding: 25px; }
+    body { margin:0; font-family: sans-serif; background: var(--bg); padding: 25px; }
     .source-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 12px; margin-bottom: 30px; }
-    .source-card { background: var(--card); border: 1px solid var(--line); padding: 15px; border-radius: 12px; transition: 0.3s; }
-    
-    /* 🚦 신호등 색상 적용 */
-    .status-success { border-top: 5px solid #22c55e; background: #f0fdf4; } /* 수집 성공 */
-    .status-zero { border-top: 5px solid #f59e0b; background: #fffbeb; }    /* 공고 없음 */
-    .status-fail { border-top: 5px solid #ef4444; background: #fef2f2; }    /* 수집 실패 */
-
-    .source-card h4 { margin: 0 0 10px 0; font-size: 13px; }
-    .btn-open { font-size: 11px; text-decoration: none; color: #1d4ed8; font-weight: bold; border: 1px solid #1d4ed8; padding: 4px 8px; border-radius: 6px; }
-    
+    .source-card { background: var(--card); border: 1px solid var(--line); padding: 15px; border-radius: 12px; border-top: 5px solid #ccc; }
+    .status-success { border-top-color: #22c55e; background: #f0fdf4; } /* 초록: 성공 */
+    .status-zero { border-top-color: #f59e0b; background: #fffbeb; }    /* 주황: 0건 */
+    .status-fail { border-top-color: #ef4444; background: #fef2f2; }    /* 빨강: 실패 */
+    .btn-open { font-size: 11px; text-decoration: none; color: #1d4ed8; font-weight: bold; }
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 12px; overflow: hidden; }
-    th { background: #f8f9fa; padding: 14px; border-bottom: 2px solid var(--line); text-align: left; }
+    th { background: #f8f9fa; padding: 14px; text-align: left; border-bottom: 2px solid var(--line); }
     td { padding: 14px; border-bottom: 1px solid var(--line); font-size: 14px; }
-    .is-new { color: red; font-weight: bold; font-size: 11px; margin-right: 5px; }
   </style>
 </head>
 <body>
-<header><h1>📊 공고 통합 대시보드 (15개 기관)</h1><p id="updateInfo">수집 중...</p></header>
-
+<header><h1>📊 공고 통합 대시보드 (15개 기관)</h1><p id="updateInfo">업데이트 확인 중...</p></header>
 <div class="source-grid" id="sourceGrid"></div>
-
 <table>
-  <thead><tr><th width="150">수집기관</th><th>공고 제목</th><th width="120">수집일</th></tr></thead>
+  <thead><tr><th width="180">기관명</th><th>공고 제목</th><th width="120">수집일</th></tr></thead>
   <tbody id="feedBody"></tbody>
 </table>
-
 <script>
-  const SITES = [
-    { id: "mss_incheon", name: "인천중소벤처기업청", url: "https://www.mss.go.kr/site/incheon/ex/bbs/List.do?cbIdx=248" },
-    { id: "kosmes", name: "중소벤처기업진흥공단", url: "https://www.kosmes.or.kr/nsh/nt/bbs/getBbsList.do?bbsCategory=01" },
-    { id: "smr", name: "성남시장권활성화재단", url: "https://www.smr.or.kr/base/board/list?boardManagementNo=1" },
-    { id: "gmr", name: "경기도상권진흥원", url: "https://www.gmr.or.kr/base/board/list?boardManagementNo=1" },
-    { id: "bizok", name: "비즈오케이(인천)", url: "https://bizok.incheon.go.kr/open_content/biz.do" },
-    { id: "wbiz", name: "여성기업종합정보포털", url: "https://www.wbiz.or.kr/notice/biz.do" },
-    { id: "semas", name: "소상공인시장진흥공단", url: "https://www.semas.or.kr/web/board/webBoardList.do?boardId=30" },
-    { id: "insupport", name: "인천소상공인지원센터", url: "https://www.insupport.or.kr/sub/sub03_02.php" },
-    { id: "nhn_commerce", name: "NHN커머스", url: "https://www.nhn-commerce.com/support/notice-list.gd" },
-    { id: "gobiz", name: "고비즈", url: "https://kr.gobizkorea.com/customer/notice/noticeList.do" },
-    { id: "fanfandaero", name: "판판대로", url: "https://fanfandaero.kr/portal/read/readDetail.do" },
-    { id: "sbiz24", name: "소상공인24", url: "https://www.sbiz24.kr/#/combinePblanc" },
-    { id: "kodma", name: "한국소상공인기업총연합회", url: "https://www.kodma.or.kr/bbs/list.do?&bbs_cd=notice" },
-    { id: "ymf_notice", name: "전통시장육성재단(공지)", url: "https://www.ymf.or.kr/sub/sub03_03.php" },
-    { id: "ymf_related", name: "전통시장육성재단(유관)", url: "https://www.ymf.or.kr/sub/sub03_05.php" }
-  ];
-
+  const SITES = [{id:"mss_incheon", name:"인천중소벤처기업청", url:"https://www.mss.go.kr/site/incheon/ex/bbs/List.do?cbIdx=248"},{id:"kosmes", name:"중소벤처기업진흥공단", url:"https://www.kosmes.or.kr/nsh/nt/bbs/getBbsList.do?bbsCategory=01"},{id:"smr", name:"성남시장권활성화재단", url:"https://www.smr.or.kr/base/board/list?boardManagementNo=1"},{id:"gmr", name:"경기도상권진흥원", url:"https://www.gmr.or.kr/base/board/list?boardManagementNo=1"},{id:"bizok", name:"비즈오케이(인천)", url:"https://bizok.incheon.go.kr/open_content/biz.do"},{id:"wbiz", name:"여성기업종합정보포털", url:"https://www.wbiz.or.kr/notice/biz.do"},{id:"semas", name:"소상공인시장진흥공단", url:"https://www.semas.or.kr/web/board/webBoardList.do?boardId=30"},{id:"insupport", name:"인천소상공인지원센터", url:"https://www.insupport.or.kr/sub/sub03_02.php"},{id:"nhn_commerce", name:"NHN커머스", url:"https://www.nhn-commerce.com/support/notice-list.gd"},{id:"gobiz", name:"고비즈", url:"https://kr.gobizkorea.com/customer/notice/noticeList.do"},{id:"fanfandaero", name:"판판대로", url:"https://fanfandaero.kr/portal/read/readDetail.do"},{id:"sbiz24", name:"소상공인24", url:"https://www.sbiz24.kr/#/combinePblanc"},{id:"kodma", name:"한국소상공인기업총연합회", url:"https://www.kodma.or.kr/bbs/list.do?&bbs_cd=notice"},{id:"ymf_notice", name:"전통시장육성재단(공지)", url:"https://www.ymf.or.kr/sub/sub03_03.php"},{id:"ymf_related", name:"전통시장육성재단(유관)", url:"https://www.ymf.or.kr/sub/sub03_05.php"}];
   async function load() {
     try {
-      const res = await fetch('./feed.json', { cache: 'no-store' });
+      const res = await fetch('./feed.json', { cache: 'no-store' }); // 💡 상대 경로로 수정
       const data = await res.json();
       const statusMap = data.status || {};
-
-      document.getElementById('sourceGrid').innerHTML = SITES.map(s => {
-        const cls = statusMap[s.id] ? `status-${statusMap[s.id]}` : '';
-        return `<div class="source-card ${cls}"><h4>${s.name}</h4><a href="${s.url}" target="_blank" class="btn-open">열기</a></div>`;
-      }).join('');
-
-      document.getElementById('feedBody').innerHTML = data.items.map(it => `
-        <tr><td>${it.source_name}</td><td><span class="is-new">NEW</span><a href="${it.url}" target="_blank" style="text-decoration:none; color:#333;">${it.title}</a></td><td>${it.notice_date}</td></tr>
-      `).join('');
-      document.getElementById('updateInfo').textContent = `최종 수집: ${data.generated_at.split('T')[0]} | 성공: ${data.items.length}건`;
-    } catch (e) { console.error("데이터 로드 실패"); }
+      document.getElementById('sourceGrid').innerHTML = SITES.map(s => `<div class="source-card status-${statusMap[s.id] || 'fail'}"><h4>${s.name}</h4><a href="${s.url}" target="_blank" class="btn-open">사이트 열기</a></div>`).join('');
+      document.getElementById('feedBody').innerHTML = data.items.map(it => `<tr><td>${it.source_name}</td><td><b><a href="${it.url}" target="_blank" style="text-decoration:none; color:#333;">${it.title}</a></b></td><td>${it.notice_date}</td></tr>`).join('');
+      document.getElementById('updateInfo').textContent = "마지막 업데이트: " + data.generated_at.split('T')[0];
+    } catch (e) { document.getElementById('updateInfo').textContent = "데이터 로딩 실패. GitHub Actions 탭을 확인하세요."; }
   }
   load();
 </script>
 </body>
-</html>b  
+</html>
